src/test/deca/context/invalid/created/test-a-2.deca
class A extends B{
    int y;
}